# ts-to-luban

./: .ghlp-metadata.json  .gitignore  .npmrc  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  default.project.json  index.d.ts  luban.config.toml  opencode.json  output.xml  package.json  prd.md  temp_config.toml  v2.md
.claude/commands/: fix-in-example.md
.github/workflows/: ci.yml  publish-npm.yml  release.yml
.sisyphus/: ultrawork-state.json
docs/plans/: 2025-12-31-luban-schema-generator.md  2026-01-10-ts-table-generation-design.md  2026-01-10-ts-table-implementation.md  2026-01-10-v2-decorators-design.md  2026-01-10-v2-implementation.md  2026-01-11-extends-based-parent-design.md
example/: luban-examples.config.toml  luban.config.toml  package-lock.json  package.json
example/output/: bean_names.xml  bean_types.xml  events.xml  generated.xml  generated_enums.xml
example/shared-pkg/: ts-luban.config.toml  tsconfig.json
examples/: .env.example  .env.roblox  CLAUDE.md  luban.config.toml  package-lock.json  package.json  pnpm-lock.yaml
examples/bootstrap/: readme.md
examples/configs/: luban.conf
examples/src/: index.ts
legacy/: gen-luban-schema.mjs
luban-ts/: default.project.json  luban.config.toml  package.json  pnpm-lock.yaml  rokit.toml  tsconfig.json
luban-ts/src/: index.ts  testez.d.ts
scripts/: install.js
src/: base_class.rs  cache.rs  config.rs  generator.rs  lib.rs  main.rs  parser.rs  scanner.rs  table_mapping.rs  table_registry.rs  tsconfig.rs  type_mapper.rs  validator.rs
src/parser/: class_info.rs  decorator.rs  enum_info.rs  field_info.rs  virtual_fields.rs
src/ts_generator/: beans_gen.rs  creator_gen.rs  import_resolver.rs  index_gen.rs  mod.rs  registry_gen.rs  (+2 more)
src_rojo/: index.d.ts  init.luau
tests/: integration.rs
(+143 files in other folders)
